css/blocks/leader.css
/* ToDo: Make .leader min-height not break the JS to add automatic spacing on short pieces. */
.leader h1, 
.leader h2 { font-size:3.3em; letter-spacing:-1px; line-height:1.3em; margin-top:0.65em; padding-top:0; }
.leader.first.front { max-height:630px; }
.leader.read,
.leader .read,
.leader .read a { color:#bbb; }
.leader cite { line-height:1.75em; font-size:1.2em; }
.leader p { font-size:1.4em; line-height:1.5em; margin-top:1.52em; text-align:justify; }
.leader hr { border:0; text-align:center; margin:0; height:0; }
.leader hr:after { content:"--"; }
.leader .dateline { font-size:.85em; text-transform:uppercase; }
.leader .dateline:after { content:" -- "; }

